--- a/calendar/resources/css/main.scss
+++ b/calendar/resources/css/main.scss
@@ -1,5 +1,21 @@
 @import 'bootstrap/scss/bootstrap.scss';
 
 h1 {
-    color: blue;
+    color: magenta;
 }
+
+.skaiciuEile {
+    /* flex: 0 0 14.28%; */
+    max-width: 14.28%;
+    width: 100%;
+  }
+  
+  .dienos {
+    /* flex: 0 0 14.28%; */
+    max-width: 14.28%;
+  }
+  
+  .selected {
+    color: red;
+    background-color: rgba(0, 0, 0, 0.15);
+  }
