--- a/calendar/resources/css/main.scss
+++ b/calendar/resources/css/main.scss
@@ -4,18 +4,18 @@ h1 {
     color: magenta;
 }
 
-.skaiciuEile {
-    /* flex: 0 0 14.28%; */
-    max-width: 14.28%;
-    width: 100%;
-  }
-  
-  .dienos {
-    /* flex: 0 0 14.28%; */
-    max-width: 14.28%;
-  }
-  
-  .selected {
-    color: red;
-    background-color: rgba(0, 0, 0, 0.15);
-  }
+.days {
+  /* flex: 0 0 14.28%; */
+  max-width: 14.28%;
+  width: 100%;
+}
+
+.weekDays {
+  max-width: 14.28%;
+  text-align: center;
+}
+
+.selected {
+  color: red;
+  background-color: rgba(0, 0, 0, 0.15);
+}
